# zztrs

./: Cargo.toml
src/: color.rs  game.rs  game_old.rs  main.rs  math.rs  render.rs  sidebar.rs  world.rs
src/components/: board.rs  color.rs  mod.rs  position.rs
src/element/: color.rs  mod.rs
src/elements/: actors.rs  color.rs  mod.rs  status_element.rs
src/loader/: board.rs  mod.rs  world.rs
src/world/: board.rs  header.rs  mod.rs  world.rs
