[package]
name = "zztrs"
version = "0.1.0"
authors = ["Mark Glenn <markglenn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
bracket-lib = "0.7"
