[package]
name = "zztrs"
version = "0.1.0"
authors = ["Mark Glenn <markglenn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.7"
nom = "7.1.1"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
specs = "0.18.0"
specs-derive = "0.4.1"
